# APNG4Android

./: .gitignore  LICENSE  README-zh_CN.md  README.md  build.gradle  local.properties  settings.gradle  version.properties
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml
apng/: build.gradle  pom.properties
apng/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.avif  world-cup.avif
app/src/main/res/layout/: activity_apng_list_test.xml  activity_apnglib.xml  activity_apnglib2.xml  activity_apngtest.xml  activity_main.xml  item.xml
app/src/main/res/values/: strings.xml
avif/: build.gradle  pom.properties
avif/src/main/res/values/: strings.xml
awebp/: build.gradle  pom.properties
awebp/src/main/: AndroidManifest.xml
awebp/src/main/res/values/: strings.xml
awebpencoder/: build.gradle  pom.properties
awebpencoder/src/main/: AndroidManifest.xml
frameanimation/: build.gradle  pom.properties
frameanimation/src/main/: AndroidManifest.xml
gif/: build.gradle  pom.properties  proguard-rules.pro
gif/src/main/: AndroidManifest.xml
gif/src/main/cpp/: CMakeLists.txt  GifDecoder.cpp  Reader.cpp  Reader.h  common.h
glide_awebp/: build.gradle
glide_awebp/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
gradles/: deps-importer.gradle  deps-printer.gradle  maven.properties  route-kotlin.gradle  route.gradle
plugin_glide/: build.gradle  pom.properties
plugin_glide/src/main/: AndroidManifest.xml
scripts/: maven.properties  upload.gradle
(+414 files in other folders)
